# chip8-interpreter

./: CMakeLists.txt  main.cpp
